# robocasa

./: pyproject.toml
robocasa/: __init__.py  macros.py
robocasa/models/: __init__.py
robocasa/scripts/: download_kitchen_assets.py
robocasa/utils/robomimic/: robomimic_dataset_utils.py
